// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/chats DELETE / /:chatId - delete chat 1`] = `
Object {
  "entities": Object {},
}
`;

exports[`/api/chats GET / / - get chats 1`] = `
Object {
  "entities": Object {
    "chats": Object {
      "3180a744-f6b0-4a09-8046-4e713bf5b565": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "hasUnread": false,
        "id": "3180a744-f6b0-4a09-8046-4e713bf5b565",
        "isFlagged": false,
        "lastTextMessageDate": "2017-07-22T00:14:30.932Z",
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "patientPhoneNumber": "+16045555555",
      },
    },
  },
  "result": Array [
    "3180a744-f6b0-4a09-8046-4e713bf5b565",
  ],
}
`;

exports[`/api/chats GET / /:chatId - retrieve chat 1`] = `
Object {
  "entities": Object {
    "chats": Object {
      "3180a744-f6b0-4a09-8046-4e713bf5b565": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "hasUnread": false,
        "id": "3180a744-f6b0-4a09-8046-4e713bf5b565",
        "isFlagged": false,
        "lastTextMessageDate": "2017-07-22T00:14:30.932Z",
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "patientPhoneNumber": "+16045555555",
      },
    },
  },
  "result": "3180a744-f6b0-4a09-8046-4e713bf5b565",
}
`;

exports[`/api/chats GET / /:chatId/textMessages - offset and limiting returns correct messages 1`] = `
Object {
  "entities": Object {
    "textMessages": Object {
      "059987cb-3051-4656-98d0-72cda34d32a6": Object {
        "accountSid": null,
        "apiVersion": null,
        "body": "This is a test text message",
        "chatId": "3180a744-f6b0-4a09-8046-4e713bf5b565",
        "dateCreated": null,
        "dateUpdated": null,
        "from": "+16043333333",
        "fromCity": null,
        "fromCountry": null,
        "fromState": null,
        "fromZip": null,
        "id": "059987cb-3051-4656-98d0-72cda34d32a6",
        "isOutsideOfficeHoursRespond": false,
        "mediaData": null,
        "numMedia": null,
        "numSegments": null,
        "read": false,
        "smsStatus": null,
        "to": "+16045555555",
        "toCity": null,
        "toCountry": null,
        "toState": null,
        "toZip": null,
        "user": Object {
          "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "avatarUrl": null,
          "createdAt": "2017-07-19T00:14:30.932Z",
          "deletedAt": null,
          "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
          "firstName": "Harvey",
          "id": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
          "lastName": "Dentest",
          "permissionId": "84d4e661-1155-4494-8fdb-c4ec0ddf804d",
          "sendBookingRequestEmail": true,
          "username": "manager@test.com",
        },
        "userId": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
      },
    },
  },
  "result": Array [
    "059987cb-3051-4656-98d0-72cda34d32a6",
  ],
  "total": 2,
}
`;

exports[`/api/chats GET / /:chatId/textMessages - retrieve text messages for a chat 1`] = `
Object {
  "entities": Object {
    "textMessages": Object {
      "059987cb-3051-4656-98d0-72cda34d32a1": Object {
        "accountSid": null,
        "apiVersion": null,
        "body": "This is a test text message, latest",
        "chatId": "3180a744-f6b0-4a09-8046-4e713bf5b565",
        "dateCreated": null,
        "dateUpdated": null,
        "from": "+16043333333",
        "fromCity": null,
        "fromCountry": null,
        "fromState": null,
        "fromZip": null,
        "id": "059987cb-3051-4656-98d0-72cda34d32a1",
        "isOutsideOfficeHoursRespond": false,
        "mediaData": null,
        "numMedia": null,
        "numSegments": null,
        "read": false,
        "smsStatus": null,
        "to": "+16045555555",
        "toCity": null,
        "toCountry": null,
        "toState": null,
        "toZip": null,
        "user": Object {
          "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "avatarUrl": null,
          "createdAt": "2017-07-19T00:14:30.932Z",
          "deletedAt": null,
          "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
          "firstName": "Harvey",
          "id": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
          "lastName": "Dentest",
          "permissionId": "84d4e661-1155-4494-8fdb-c4ec0ddf804d",
          "sendBookingRequestEmail": true,
          "username": "manager@test.com",
        },
        "userId": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
      },
      "059987cb-3051-4656-98d0-72cda34d32a6": Object {
        "accountSid": null,
        "apiVersion": null,
        "body": "This is a test text message",
        "chatId": "3180a744-f6b0-4a09-8046-4e713bf5b565",
        "dateCreated": null,
        "dateUpdated": null,
        "from": "+16043333333",
        "fromCity": null,
        "fromCountry": null,
        "fromState": null,
        "fromZip": null,
        "id": "059987cb-3051-4656-98d0-72cda34d32a6",
        "isOutsideOfficeHoursRespond": false,
        "mediaData": null,
        "numMedia": null,
        "numSegments": null,
        "read": false,
        "smsStatus": null,
        "to": "+16045555555",
        "toCity": null,
        "toCountry": null,
        "toState": null,
        "toZip": null,
        "user": Object {
          "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "avatarUrl": null,
          "createdAt": "2017-07-19T00:14:30.932Z",
          "deletedAt": null,
          "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
          "firstName": "Harvey",
          "id": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
          "lastName": "Dentest",
          "permissionId": "84d4e661-1155-4494-8fdb-c4ec0ddf804d",
          "sendBookingRequestEmail": true,
          "username": "manager@test.com",
        },
        "userId": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
      },
    },
  },
  "result": Array [
    "059987cb-3051-4656-98d0-72cda34d32a1",
    "059987cb-3051-4656-98d0-72cda34d32a6",
  ],
  "total": 2,
}
`;

exports[`/api/chats GET / /patient/:patientId - return chat with patient 1`] = `
Object {
  "entities": Object {
    "chats": Object {
      "3180a744-f6b0-4a09-8046-4e713bf5b565": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "hasUnread": false,
        "id": "3180a744-f6b0-4a09-8046-4e713bf5b565",
        "isFlagged": false,
        "lastTextMessageDate": "2017-07-22T00:14:30.932Z",
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "patientPhoneNumber": "+16045555555",
        "textMessages": Array [
          "059987cb-3051-4656-98d0-72cda34d32a6",
          "059987cb-3051-4656-98d0-72cda34d32a1",
        ],
      },
    },
    "textMessages": Object {
      "059987cb-3051-4656-98d0-72cda34d32a1": Object {
        "accountSid": null,
        "apiVersion": null,
        "body": "This is a test text message, latest",
        "chatId": "3180a744-f6b0-4a09-8046-4e713bf5b565",
        "dateCreated": null,
        "dateUpdated": null,
        "from": "+16043333333",
        "fromCity": null,
        "fromCountry": null,
        "fromState": null,
        "fromZip": null,
        "id": "059987cb-3051-4656-98d0-72cda34d32a1",
        "isOutsideOfficeHoursRespond": false,
        "mediaData": null,
        "numMedia": null,
        "numSegments": null,
        "read": false,
        "smsStatus": null,
        "to": "+16045555555",
        "toCity": null,
        "toCountry": null,
        "toState": null,
        "toZip": null,
        "user": Object {
          "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "avatarUrl": null,
          "createdAt": "2017-07-19T00:14:30.932Z",
          "deletedAt": null,
          "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
          "firstName": "Harvey",
          "id": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
          "lastName": "Dentest",
          "permissionId": "84d4e661-1155-4494-8fdb-c4ec0ddf804d",
          "sendBookingRequestEmail": true,
          "username": "manager@test.com",
        },
        "userId": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
      },
      "059987cb-3051-4656-98d0-72cda34d32a6": Object {
        "accountSid": null,
        "apiVersion": null,
        "body": "This is a test text message",
        "chatId": "3180a744-f6b0-4a09-8046-4e713bf5b565",
        "dateCreated": null,
        "dateUpdated": null,
        "from": "+16043333333",
        "fromCity": null,
        "fromCountry": null,
        "fromState": null,
        "fromZip": null,
        "id": "059987cb-3051-4656-98d0-72cda34d32a6",
        "isOutsideOfficeHoursRespond": false,
        "mediaData": null,
        "numMedia": null,
        "numSegments": null,
        "read": false,
        "smsStatus": null,
        "to": "+16045555555",
        "toCity": null,
        "toCountry": null,
        "toState": null,
        "toZip": null,
        "user": Object {
          "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "avatarUrl": null,
          "createdAt": "2017-07-19T00:14:30.932Z",
          "deletedAt": null,
          "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
          "firstName": "Harvey",
          "id": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
          "lastName": "Dentest",
          "permissionId": "84d4e661-1155-4494-8fdb-c4ec0ddf804d",
          "sendBookingRequestEmail": true,
          "username": "manager@test.com",
        },
        "userId": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
      },
    },
  },
  "result": "3180a744-f6b0-4a09-8046-4e713bf5b565",
}
`;

exports[`/api/chats PUT / /:_chatId/textMessages/read - set all of chats unread text messages to read 1`] = `
Object {
  "entities": Object {
    "chats": Object {
      "3180a744-f6b0-4a09-8046-4e713bf5b565": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "hasUnread": false,
        "id": "3180a744-f6b0-4a09-8046-4e713bf5b565",
        "isFlagged": false,
        "lastTextMessageDate": "2017-07-22T00:14:30.932Z",
        "lastTextMessageId": null,
        "patient": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "patientId": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "patientPhoneNumber": "+16045555555",
        "textMessages": Array [
          "059987cb-3051-4656-98d0-72cda34d32a1",
          "059987cb-3051-4656-98d0-72cda34d32a6",
        ],
      },
    },
    "patients": Object {
      "10518e11-b9d2-4d74-9887-29eaae7b5938": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "address": null,
        "avatarUrl": null,
        "birthDate": "1980-01-01T00:00:00.932Z",
        "cellPhoneNumber": "+17789999999",
        "contCareInterval": null,
        "contactMethodNote": null,
        "dueForHygieneDate": null,
        "dueForRecallExamDate": null,
        "email": "testpatient@test.com",
        "familyId": "b35bee92-e86d-4084-87d8-add21a1ba0f6",
        "firstApptDate": null,
        "firstApptId": null,
        "firstName": "Ronald",
        "gender": null,
        "homePhoneNumber": null,
        "hygienePendingAppointmentId": null,
        "id": "10518e11-b9d2-4d74-9887-29eaae7b5938",
        "insurance": null,
        "insuranceInterval": null,
        "isDeleted": false,
        "isSyncedWithPMS": false,
        "isSyncedWithPms": false,
        "language": null,
        "lastApptDate": null,
        "lastApptId": null,
        "lastHygieneApptId": null,
        "lastHygieneDate": null,
        "lastName": "Mcdonald",
        "lastRecallApptId": null,
        "lastRecallDate": null,
        "lastRestorativeApptId": null,
        "lastRestorativeDate": null,
        "middleName": null,
        "mobilePhoneNumber": "+17789999999",
        "nextApptDate": null,
        "nextApptId": null,
        "omitRecallIds": Array [],
        "omitReminderIds": Array [],
        "otherPhoneNumber": null,
        "patientUserId": null,
        "phoneNumber": null,
        "pmsCreatedAt": null,
        "pmsId": "12",
        "prefContactPhone": null,
        "prefName": null,
        "preferences": Object {
          "afternoon": true,
          "birthdayMessage": true,
          "emailNotifications": true,
          "evening": true,
          "morning": true,
          "newsletter": true,
          "phone": true,
          "recalls": true,
          "referrals": true,
          "reminders": true,
          "reviews": true,
          "sms": true,
          "weekdays": true,
          "weekends": true,
        },
        "recallPendingAppointmentId": null,
        "status": "Active",
        "type": null,
        "workPhoneNumber": null,
      },
    },
    "textMessages": Object {
      "059987cb-3051-4656-98d0-72cda34d32a1": Object {
        "accountSid": null,
        "apiVersion": null,
        "body": "This is a test text message, latest",
        "chatId": "3180a744-f6b0-4a09-8046-4e713bf5b565",
        "dateCreated": null,
        "dateUpdated": null,
        "from": "+16043333333",
        "fromCity": null,
        "fromCountry": null,
        "fromState": null,
        "fromZip": null,
        "id": "059987cb-3051-4656-98d0-72cda34d32a1",
        "isOutsideOfficeHoursRespond": false,
        "mediaData": null,
        "numMedia": null,
        "numSegments": null,
        "read": true,
        "smsStatus": null,
        "to": "+16045555555",
        "toCity": null,
        "toCountry": null,
        "toState": null,
        "toZip": null,
        "user": Object {
          "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "avatarUrl": null,
          "createdAt": "2017-07-19T00:14:30.932Z",
          "deletedAt": null,
          "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
          "firstName": "Harvey",
          "id": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
          "lastName": "Dentest",
          "permissionId": "84d4e661-1155-4494-8fdb-c4ec0ddf804d",
          "sendBookingRequestEmail": true,
          "username": "manager@test.com",
        },
        "userId": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
      },
      "059987cb-3051-4656-98d0-72cda34d32a6": Object {
        "accountSid": null,
        "apiVersion": null,
        "body": "This is a test text message",
        "chatId": "3180a744-f6b0-4a09-8046-4e713bf5b565",
        "dateCreated": null,
        "dateUpdated": null,
        "from": "+16043333333",
        "fromCity": null,
        "fromCountry": null,
        "fromState": null,
        "fromZip": null,
        "id": "059987cb-3051-4656-98d0-72cda34d32a6",
        "isOutsideOfficeHoursRespond": false,
        "mediaData": null,
        "numMedia": null,
        "numSegments": null,
        "read": true,
        "smsStatus": null,
        "to": "+16045555555",
        "toCity": null,
        "toCountry": null,
        "toState": null,
        "toZip": null,
        "user": Object {
          "activeAccountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "avatarUrl": null,
          "createdAt": "2017-07-19T00:14:30.932Z",
          "deletedAt": null,
          "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
          "firstName": "Harvey",
          "id": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
          "lastName": "Dentest",
          "permissionId": "84d4e661-1155-4494-8fdb-c4ec0ddf804d",
          "sendBookingRequestEmail": true,
          "username": "manager@test.com",
        },
        "userId": "6668f250-e8c9-46e3-bfff-0249f1eec6b8",
      },
    },
  },
  "result": "3180a744-f6b0-4a09-8046-4e713bf5b565",
}
`;

exports[`/api/practitioners DELETE / /:practitionerId - delete a practitioner 1`] = `
Object {
  "entities": Object {},
}
`;

exports[`/api/practitioners DELETE / /:practitionerId - delete a practitioner then undelete 1`] = `
Object {
  "entities": Object {
    "practitioners": Object {
      "497ff59a-4bae-4013-bdce-b6b5be91a1f5": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "firstName": "Colonel",
        "id": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "isActive": true,
        "isCustomSchedule": true,
        "isDeleted": false,
        "isHidden": false,
        "lastName": "Sanders",
        "type": "Hygienist",
      },
    },
  },
}
`;

exports[`/api/practitioners GET / /:noFetchPractitionerId - get a practitioner with joins 1`] = `
Object {
  "entities": Object {
    "practitioners": Object {
      "497ff59a-4bae-4013-bdce-b6b5be91a1f5": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "firstName": "Colonel",
        "fullAvatarUrl": null,
        "id": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "isActive": true,
        "isCustomSchedule": true,
        "isHidden": false,
        "lastName": "Sanders",
        "type": "Hygienist",
        "weeklySchedule": "8ce3ba61-60cd-40c6-bc85-c018cabd4a40",
        "weeklyScheduleId": "8ce3ba61-60cd-40c6-bc85-c018cabd4a40",
      },
    },
    "weeklySchedules": Object {
      "8ce3ba61-60cd-40c6-bc85-c018cabd4a40": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "friday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": "2019-08-08",
          "deletedAt": null,
          "endTime": "1970-02-01T01:00:00.000Z",
          "id": "8f69145b-d4a2-4550-a6dc-1942e068d930",
          "isClosed": false,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "fridayId": "8f69145b-d4a2-4550-a6dc-1942e068d930",
        "id": "8ce3ba61-60cd-40c6-bc85-c018cabd4a40",
        "isAdvanced": false,
        "monday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": "2019-08-08",
          "deletedAt": null,
          "endTime": "1970-02-01T01:00:00.000Z",
          "id": "8f698c5b-d4a2-4550-a6dc-1942e068d930",
          "isClosed": false,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "mondayId": "8f698c5b-d4a2-4550-a6dc-1942e068d930",
        "saturday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": "2019-08-08",
          "deletedAt": null,
          "endTime": "1970-02-01T01:00:00.000Z",
          "id": "8f69145b-d4a2-4550-a6dc-1942e0699930",
          "isClosed": false,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "saturdayId": "8f69145b-d4a2-4550-a6dc-1942e0699930",
        "sunday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": "2019-08-08",
          "deletedAt": null,
          "endTime": "1970-02-01T01:00:00.000Z",
          "id": "8f69000b-d4a2-4550-a6dc-1942e068d930",
          "isClosed": false,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "sundayId": "8f69000b-d4a2-4550-a6dc-1942e068d930",
        "thursday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": "2019-08-08",
          "deletedAt": null,
          "endTime": "1970-02-01T01:00:00.000Z",
          "id": "8f687c5b-d4a2-4550-a6dc-1942e068d930",
          "isClosed": false,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "thursdayId": "8f687c5b-d4a2-4550-a6dc-1942e068d930",
        "tuesday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": "2019-08-08",
          "deletedAt": null,
          "endTime": "1970-02-01T01:00:00.000Z",
          "id": "99698c5b-d4a2-4550-a6dc-1942e068d930",
          "isClosed": false,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "tuesdayId": "99698c5b-d4a2-4550-a6dc-1942e068d930",
        "wednesday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": "2019-08-08",
          "deletedAt": null,
          "endTime": "1970-02-01T01:00:00.000Z",
          "id": "8f568c5b-d4a2-4550-a6dc-1942e068d930",
          "isClosed": false,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "wednesdayId": "8f568c5b-d4a2-4550-a6dc-1942e068d930",
      },
    },
  },
  "result": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
}
`;

exports[`/api/practitioners GET / /:practitionerId - get a practitioner 1`] = `
Object {
  "entities": Object {
    "practitioners": Object {
      "497ff59a-4bae-4013-bdce-b6b5be91a1f5": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "firstName": "Colonel",
        "fullAvatarUrl": null,
        "id": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "isActive": true,
        "isCustomSchedule": true,
        "isHidden": false,
        "lastName": "Sanders",
        "type": "Hygienist",
        "weeklyScheduleId": "8ce3ba61-60cd-40c6-bc85-c018cabd4a40",
      },
    },
  },
  "result": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
}
`;

exports[`/api/practitioners GET / get all practitioners 1`] = `
Object {
  "entities": Object {
    "practitioners": Object {
      "497ff59a-4bae-4013-bdce-b6b5be91a1f5": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "firstName": "Colonel",
        "fullAvatarUrl": null,
        "id": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "isActive": true,
        "isCustomSchedule": true,
        "isHidden": false,
        "lastName": "Sanders",
        "type": "Hygienist",
        "weeklyScheduleId": "8ce3ba61-60cd-40c6-bc85-c018cabd4a40",
      },
    },
  },
  "result": Array [
    "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
  ],
}
`;

exports[`/api/practitioners GET / get all practitioners with weeklySchedule 1`] = `
Object {
  "entities": Object {
    "practitioners": Object {
      "497ff59a-4bae-4013-bdce-b6b5be91a1f5": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "firstName": "Colonel",
        "fullAvatarUrl": null,
        "id": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "isActive": true,
        "isCustomSchedule": true,
        "isHidden": false,
        "lastName": "Sanders",
        "type": "Hygienist",
        "weeklySchedule": "8ce3ba61-60cd-40c6-bc85-c018cabd4a40",
        "weeklyScheduleId": "8ce3ba61-60cd-40c6-bc85-c018cabd4a40",
      },
    },
    "weeklySchedules": Object {
      "8ce3ba61-60cd-40c6-bc85-c018cabd4a40": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "friday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": "2019-08-08",
          "deletedAt": null,
          "endTime": "1970-02-01T01:00:00.000Z",
          "id": "8f69145b-d4a2-4550-a6dc-1942e068d930",
          "isClosed": false,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "fridayId": "8f69145b-d4a2-4550-a6dc-1942e068d930",
        "id": "8ce3ba61-60cd-40c6-bc85-c018cabd4a40",
        "isAdvanced": false,
        "monday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": "2019-08-08",
          "deletedAt": null,
          "endTime": "1970-02-01T01:00:00.000Z",
          "id": "8f698c5b-d4a2-4550-a6dc-1942e068d930",
          "isClosed": false,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "mondayId": "8f698c5b-d4a2-4550-a6dc-1942e068d930",
        "saturday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": "2019-08-08",
          "deletedAt": null,
          "endTime": "1970-02-01T01:00:00.000Z",
          "id": "8f69145b-d4a2-4550-a6dc-1942e0699930",
          "isClosed": false,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "saturdayId": "8f69145b-d4a2-4550-a6dc-1942e0699930",
        "sunday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": "2019-08-08",
          "deletedAt": null,
          "endTime": "1970-02-01T01:00:00.000Z",
          "id": "8f69000b-d4a2-4550-a6dc-1942e068d930",
          "isClosed": false,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "sundayId": "8f69000b-d4a2-4550-a6dc-1942e068d930",
        "thursday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": "2019-08-08",
          "deletedAt": null,
          "endTime": "1970-02-01T01:00:00.000Z",
          "id": "8f687c5b-d4a2-4550-a6dc-1942e068d930",
          "isClosed": false,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "thursdayId": "8f687c5b-d4a2-4550-a6dc-1942e068d930",
        "tuesday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": "2019-08-08",
          "deletedAt": null,
          "endTime": "1970-02-01T01:00:00.000Z",
          "id": "99698c5b-d4a2-4550-a6dc-1942e068d930",
          "isClosed": false,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "tuesdayId": "99698c5b-d4a2-4550-a6dc-1942e068d930",
        "wednesday": Object {
          "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
          "breaks": Array [],
          "chairIds": Array [],
          "date": "2019-08-08",
          "deletedAt": null,
          "endTime": "1970-02-01T01:00:00.000Z",
          "id": "8f568c5b-d4a2-4550-a6dc-1942e068d930",
          "isClosed": false,
          "pmsId": null,
          "practitionerId": null,
          "startTime": "1970-01-31T16:00:00.000Z",
        },
        "wednesdayId": "8f568c5b-d4a2-4550-a6dc-1942e068d930",
      },
    },
  },
  "result": Array [
    "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
  ],
}
`;

exports[`/api/practitioners POST / create practitioner 1`] = `
Object {
  "entities": Object {
    "practitioners": Object {
      "497ff59a-4bae-4013-bdce-b6b5be91a1f5": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "firstName": "Colonel",
        "fullAvatarUrl": null,
        "id": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "isActive": true,
        "isCustomSchedule": true,
        "isHidden": false,
        "lastName": "Sanders",
        "type": "Hygienist",
      },
    },
  },
}
`;

exports[`/api/practitioners PUT / /:practitionerId - update practitioner 1`] = `
Object {
  "entities": Object {
    "practitioners": Object {
      "497ff59a-4bae-4013-bdce-b6b5be91a1f5": Object {
        "accountId": "62954241-3652-4792-bae5-5bfed53d37b7",
        "firstName": "Updated",
        "fullAvatarUrl": null,
        "id": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
        "isActive": true,
        "isCustomSchedule": true,
        "isHidden": false,
        "lastName": "Sanders",
        "services": Array [],
        "type": "Hygienist",
        "weeklyScheduleId": "8ce3ba61-60cd-40c6-bc85-c018cabd4a40",
      },
    },
  },
  "result": "497ff59a-4bae-4013-bdce-b6b5be91a1f5",
}
`;
